<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gikonyo.droidcafe.MainActivity">
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/about_us"
        app:showAsAction="never"
        android:icon="@drawable/ic_about_us"/>
    <item
        android:id="@+id/action_order"
        android:orderInCategory="1"
        android:title="@string/order"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="3"
        android:title="@string/order_status"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_call"
        android:orderInCategory="2"
        android:title="@string/call_us"
        android:icon="@drawable/ic_call_us"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_location"
        android:orderInCategory="4"
        android:title="@string/locate_us"
        android:icon="@drawable/ic_location_us"
        app:showAsAction="ifRoom"
        />
</menu>
