<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
<TextView
    android:id="@+id/text_intro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/droid_deserts_heading"
    android:textStyle="bold"
    android:textSize="20sp"
    android:textColor="@color/colorPrimary"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_choose_desert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_choose_desert"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/donut"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="showDonutMessage"
        app:layout_constraintTop_toBottomOf="@id/text_choose_desert"
        android:contentDescription="@string/donut_description"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/donut"/>
    <TextView
        android:id="@+id/text_donut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/donut_description"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/text_choose_desert"
        app:layout_constraintBottom_toBottomOf="@id/donut"
        app:layout_constraintLeft_toRightOf="@id/donut"/>

    <ImageView
        android:id="@+id/iceCream"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="showIceCreamOrderMessage"
        app:layout_constraintTop_toBottomOf="@id/donut"
        android:contentDescription="@string/ice_cream_description"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/icecream"/>
    <TextView
        android:id="@+id/text_iceCream"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream_description"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/donut"
        app:layout_constraintBottom_toBottomOf="@id/iceCream"
        app:layout_constraintLeft_toRightOf="@id/iceCream"/>

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="showFroyoOrderMessage"
        app:layout_constraintTop_toBottomOf="@id/iceCream"
        android:contentDescription="@string/froyo_description"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/froyoyogo"/>
    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/froyo_description"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/iceCream"
        app:layout_constraintBottom_toBottomOf="@id/froyo"
        app:layout_constraintLeft_toRightOf="@id/froyo"/>


</androidx.constraintlayout.widget.ConstraintLayout>
